--- a/reddeer_presentation.tex
+++ b/reddeer_presentation.tex
@@ -3,12 +3,19 @@
 \usecolortheme{beaver}
 \usepackage{tikz}
 \usepackage{color}
+\usepackage{listings}
 
-\setbeamercolor{title}{fg=black,bg=brown!20}
-\setbeamercolor{frametitle}{fg=brown,bg=white}
+\lstset{language=Java,
+  basicstyle=\footnotesize\ttfamily,
+  keywordstyle=\footnotesize\color{blue}\ttfamily,
+}
+
+\definecolor{darkred}{rgb}{0.8,0,0}
+
+\setbeamercolor{title}{fg=white,bg=darkred!80!black}
+\setbeamercolor{frametitle}{fg=darkred!80!black,bg=white}
 %\setbeamercolor{section in head/foot}{fg=green,bg=yellow}
 %\setbeamercolor{subsection in head/foot}{bg=white}
-
 \begin{document}
 \title{Getting started with RedDeer}   
 \author{Andrej Podhradsky}
@@ -19,7 +26,7 @@
 
 \addtobeamertemplate{frametitle}{}{
 \begin{tikzpicture}[remember picture,overlay]
-\node[anchor=north east,yshift=-8pt] at (current page.north east) {\includegraphics[height=0.8cm]{reddeer_logo.png}};
+\node[anchor=north east,yshift=-8pt] at (current page.north east) {\includegraphics[height=1cm]{reddeer_logo.png}};
 \end{tikzpicture}}
 
 \frame{\titlepage} 
@@ -55,8 +62,16 @@
 
 \section{Example}
 \subsection{Example}
-\frame{\frametitle{Example}
+\begin{frame}[fragile]
+\frametitle{Example}
+\begin{lstlisting}
+public class HelloWorld {
+  public static void main(String[] args) {
+    System.out.println("Hello World");
+  }
 }
+\end{lstlisting}
+\end{frame}
 
 \section{Debugging}
 \subsection{Debugging}
