--- a/reddeer_presentation.tex
+++ b/reddeer_presentation.tex
@@ -206,7 +206,7 @@ public boolean matches(Object item);
 \end{itemize}
 \end{frame}
 
-\subsection{Requirments}
+\subsection{Requirements}
 \begin{frame}[fragile]
 \frametitle{Requirements}
 \begin{itemize}
@@ -218,6 +218,19 @@ public boolean matches(Object item);
 
 @SwitchYard(server = @Server(type = ANY, state = RUNNING))
 \end{lstlisting}
+\end{itemize}
+\end{frame}
+
+
+\section{Learning Materials}
+\begin{frame}[fragile]
+\frametitle{Learning Materials}
+\begin{itemize}
+\item RedDeer Wiki\\\url{https://github.com/jboss-reddeer/reddeer/wiki}
+\item Say Hello to Red Deer\\\url{http://java.dzone.com/articles/hunting-swt-test-framework-say}
+\item How Red Deer Helps you to Debug Failed Tests\\\url{http://architects.dzone.com/articles/if-bad-things-happen-good}
+\item Creating Complex Test Configurations with Red Deer\\\url{http://java.dzone.com/articles/creating-complex-test}
+\item JBTIS Tests\\\url{https://github.com/jbosstools/jbosstools-integration-stack-tests}
 \end{itemize}
 \end{frame}
 
